feat:upload image cms install

--- a/src/assets/css/components/UploadImage.less
+++ b/src/assets/css/components/UploadImage.less
@@ -1,7 +1,7 @@
 /*
  * @Author: iRuxu
  * @Date: 2022-07-08 00:06:20
- * @LastEditTime: 2022-07-08 15:08:00
+ * @LastEditTime: 2022-07-13 18:55:51
  * @Description:上传单个图片
  */
 
@@ -31,7 +31,8 @@
             align-items: center;
             .pointer;
             font-style: normal;
-            img {
+            img,
+            svg {
                 .size(15%);
             }
             .none;
